# meuSite

./: .env.dev  .gitignore  Dockerfile  README.md  db.json  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  requirements.txt
app/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  pyproject.toml
app/authentication/: admin.py  models.py  urls.py  views.py
app/authentication/locale/en/LC_MESSAGES/: django.po
app/authentication/management/commands/: create_superuser_if_not_exists.py
app/authentication/migrations/: 0001_initial.py
app/authentication/templates/authentication/: home.html  landing.html
app/blog/: admin.py  forms.py  models.py  service.py  urls.py  views.py
app/blog/locale/en/LC_MESSAGES/: django.po
app/blog/migrations/: 0001_initial.py  0002_remove_post_subtitle_remove_post_text_and_more.py
app/blog/templates/blog/: post.html
app/locale/en/LC_MESSAGES/: django.po
app/meuSite/: settings.py  urls.py
app/meu_site/: asgi.py  settings.py  urls.py  wsgi.py
app/static/css/: animation.css  circle.css  code.css  form.css  link.css  loader.css  style.css
app/templates/: base.html
app/templates/admin/: base_site.html
auth/: admin.py
authentication/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
authentication/migrations/: 0001_initial.py  0002_auto_20210729_2311.py  0002_auto_20210809_0033.py  (+19 more)
blog/: admin.py  forms.py  markdown_converter.py  models.py  urls.py  views.py
meuSite/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
scripts/: rundjango.sh
templates/: base.html
(+31 files in other folders)
