[project]
name = "meusite"
version = "0.1.0"
description = ""
authors = [
    {name = "enzo.soares enzo@soares.digital"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "psycopg[binary] (>=3.2.6,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "markdown2 (>=2.5.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
